fix breadcrumb alignment

--- a/source/_assets/sass/_style_breadcrumb.scss
+++ b/source/_assets/sass/_style_breadcrumb.scss
@@ -95,6 +95,7 @@
 
 .content-header .breadcrumb {
   margin-bottom: 1.5rem;
+  margin-top: .5rem;
 }
 
 main, .sectional, .content-container {
