--- a/source/_assets/sass/_style_layout.scss
+++ b/source/_assets/sass/_style_layout.scss
@@ -95,6 +95,7 @@
 .program-option .content-header { border-top:0; 
   // margin-top: 1rem; 
 }
+.content-header.bg-primary { margin-top: 1rem;}
 .page-interior .content-header.bg-primary { margin-top: -1rem;}
  // .layout-has-left-nav
 
